--- a/pom.xml
+++ b/pom.xml
@@ -5,17 +5,25 @@
     <parent>
         <groupId>com.xd</groupId>
         <artifactId>Common-Dependencies</artifactId>
-        <version>1.0.0-SNAPAHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
         <relativePath>../Common-Dependencies/pom.xml</relativePath>
     </parent>
     <artifactId>Server-Feign</artifactId>
     <packaging>jar</packaging>
 
-    <name>Server-Feign</name>
-    <url>http://www.funtl.com</url>
-    <inceptionYear>2018-Now</inceptionYear>
-
-
+    <!--配置私服-->
+    <distributionManagement>
+        <snapshotRepository>
+            <id>nexus-snapshots</id>
+            <name>Nexus Snapshot Repository</name>
+            <url>http://192.168.91.131:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
+        <repository>
+            <id>nexus-releases</id>
+            <name>Nexus Release Repository</name>
+            <url>http://192.168.91.131:8081/repository/maven-releases/</url>
+        </repository>
+    </distributionManagement>
     <dependencies>
         <!--spring boot begin-->
         <dependency>
@@ -113,8 +121,32 @@
             <id>aliyunmaven</id>
             <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
         </repository>
+        <!--        配置nexus代理仓库-->
+        <repository>
+            <id>nexus</id>
+            <name>Nexus Repository</name>
+            <url>http://192.168.91.131:8081/repository/maven-public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
     </repositories>
 
-
+    <pluginRepositories>
+        <pluginRepository>
+            <id>nexus</id>
+            <name>Nexus Plugin Repository</name>
+            <url>http://192.168.91.131:8081/repository/maven-public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
 
 </project>
